@@ -2,14 +2,14 @@ plugins {
 	id 'java'
 	id 'jacoco'
 	id "org.sonarqube" version "2.8"
-	id 'org.springframework.boot' version '2.2.5.RELEASE'
+	id 'org.springframework.boot' version '2.2.6.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 }
 
 group = 'com.speech4j'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_14
+targetCompatibility = JavaVersion.VERSION_14
 
 repositories {
 	mavenCentral()
@@ -28,11 +28,11 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
-	implementation group: 'org.projectlombok', name: 'lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.projectlombok:lombok'
 	annotationProcessor "org.projectlombok:lombok"
-	implementation group: 'org.springframework.security', name: 'spring-security-crypto'
-	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.3.0'
+	implementation 'org.springframework.security:spring-security-crypto'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.3.0'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api'
 	testImplementation 'org.junit.jupiter:junit-jupiter-params'
@@ -65,3 +65,11 @@ jacocoTestReport {
 }
 
 project.tasks["sonarqube"].dependsOn "jacocoTestReport"
+
+tasks.withType(JavaCompile).each {
+	it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+	jvmArgs(['--enable-preview'])
+}
